RESOLVED FIXED139459
Kotoeri conversion sometimes decides only first character automatically in Safari 7.1 or 6.2
https://bugs.webkit.org/show_bug.cgi?id=139459
Summary Kotoeri conversion sometimes decides only first character automatically in Sa...
Alexey Proskuryakov
Reported 2014-12-09 14:20:17 PST
Steps to reproduce: 1. Make sure that http://www.yahoo.co.jp is in your history. 2. Switch to Kotoeri. 3. Open a new window with http://www.yahoo.co.jp from history menu. 4. Type "ka" Results: "k" is Roman. Alternative steps to reproduce: 1. Switch to Kotoeri. 2. Load http://www.yahoo.co.jp. 3. When the search field is already visible, but does not appear focused yet, press "k". Results: "k" is not underlined. rdar://problem/19017432 rdar://problem/19036869
Attachments
proposed fix (5.03 KB, patch)
2014-12-09 14:25 PST, Alexey Proskuryakov
enrica: review+
ap: commit-queue-
Alexey Proskuryakov
Comment 1 2014-12-09 14:25:00 PST
Created attachment 242964 [details] proposed fix
Enrica Casucci
Comment 2 2014-12-09 14:27:44 PST
Comment on attachment 242964 [details] proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=242964&action=review Looks good to me. Please change the title in ChangeLog before landing. > Source/WebKit2/ChangeLog:3 > + Kotoeri conversion sometimes decides only first character automatically in Safari 7.1 or 6.2 Not sure this clear.
Alexey Proskuryakov
Comment 3 2014-12-09 14:39:09 PST
Note You need to log in before you can comment on or make changes to this bug.